# fisean

./: .ccls  .clang-format  .gitignore  BSDmakefile  GNUmakefile  LICENSE  Makefile  configure.ac  fisean.cbp  makeinclude  makeinclude.BSD  makeinclude.Linux  makeinclude.common  matrixsockets.cpp
fisean/: BSDmakefile  config.h.in  configure.ac  contact.h  makeinclude  makeinclude.Linux  makeinclude.common  matrixsockets.cpp
fisean/matrixclient/: config.h
fisean/src/: config.cpp  fisean.cpp
matrix-client/: GNUmakefile  makeinclude.FreeBSD
matrix-client/src/: matrix-client.cpp
shell/: provision.sh
src/: contact.cpp  contact.h  fisean.cpp
