AC_INIT(src/fisean.cpp)

FISEAN_MAJOR_VERSION=0
AC_SUBST(FISEAN_MAJOR_VERSION)

FISEAN_MINOR_VERSION=0
AC_SUBST(FISEAN_MINOR_VERSION)

FISEAN_PATCH_VERSION=1
AC_SUBST(FISEAN_PATCH_VERSION)

AC_LANG([C++])

CC="${CC:=}"
AC_SUBST(CC)

CXX="${CXX:=}"
AC_SUBST(CXX)

CFLAGS="${CFLAGS:=}"
AC_SUBST(CFLAGS)

CPPFLAGS="${CPPFLAGS:=}"
AC_SUBST(CPPFLAGS)

CXXFLAGS="${CXXFLAGS:=}"
AC_SUBST(CXXFLAGS)

LDFLAGS="${LDFLAGS:=}"
AC_SUBST(LDFLAGS)

AC_PROG_CC
AC_PROG_CXX


AC_CHECK_HEADER(
  curlpp/cURLpp.hpp,
  [],
  AC_MSG_ERROR([Could not find curlpp/cURLpp.hpp])
)

AC_OUTPUT(makeinclude.configured)
AC_OUTPUT(fisean/config.h)
